storage-jpa2x-hbm-impl: moved image.persistence to image.jpa2x